syntax = "proto2";

package tutorial;

import "google/protobuf/any.proto";

option java_package = "demo.proto";
option java_outer_classname = "AddressBookProtos";

message Person {

    required string name = 1;
    required int32 id = 2;
    optional string email = 3;
    repeated PhoneNumber phones = 4;
    optional google.protobuf.Any address = 5;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        required string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }
}

message AddressBook {
    repeated Person people = 1;
}